--- a/website/missions.html
+++ b/website/missions.html
@@ -24,6 +24,24 @@
             font-family: 'Inter', sans-serif;
             box-sizing: border-box;
             color: #fff;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .header-bg {
+            background-color: rgba(10, 10, 20, 0.7);
+        }
+
+        .footer-bg {
+            background-color: rgba(10, 10, 20, 0.7);
+            margin-top: auto;
+            padding: 2rem 0;
+        }
+
+        main {
+            flex-grow: 1;
+            padding: 2rem 1rem;
         }
 
         .missions-container {
@@ -31,6 +49,8 @@
             flex-direction: column;
             align-items: center;
             gap: 2rem;
+            max-width: 900px;
+            margin: 0 auto;
         }
 
         .mission-card {
@@ -41,150 +61,100 @@
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             overflow: hidden;
             width: 100%;
-            max-width: 50%;
         }
 
         .mission-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 40px rgba(0, 0, 0, 0.6);
         }
-        
-        .mission-card-wrapper {
-            height: 350px;
-            display: flex;
-            flex-direction: row;
+
+        .mission-card.reverse-order {
+            flex-direction: row-reverse;
         }
 
-        .mission-left {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
-            width: 50%;
-            padding: 2rem;
-        }
-
-        .mission-media-container {
-            background-color: #0d47a1;
-            border-radius: 2rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            padding: 2rem;
-            text-align: center;
-            font-size: 1.5rem;
-            font-weight: bold;
-            flex-grow: 1;
-            position: relative; /* For video link overlay */
-        }
-
-        .video-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-            font-size: 1.5rem;
-            z-index: 10;
-        }
-
-        .video-overlay:hover {
-            opacity: 1;
-        }
-
-        .video-overlay svg {
-            margin-right: 0.5rem;
-        }
-
-        .mission-video-wrapper {
+        .card-media {
             position: relative;
-            width: 100%;
+            width: 50%;
             height: 0;
-            padding-bottom: 56.25%;
+            padding-bottom: 28.125%;
+            /* This is half of the 16:9 aspect ratio (56.25%) to fit in a 50% width container */
+            overflow: hidden;
         }
 
-        .mission-video-wrapper iframe {
+        .card-media img,
+        .card-media iframe {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            border-radius: 1rem;
-        }
-        
-        .mission-media-image {
-            width: 100%;
-            height: auto;
-            max-height: 100%;
-            object-fit: contain;
+            object-fit: cover;
         }
 
-        .mission-right {
-            display: flex;
-            flex-direction: column;
-            text-align: left;
+        .mission-content {
             width: 50%;
             padding: 2rem;
+            display: flex;
+            flex-direction: column;
             justify-content: center;
+            text-align: left;
         }
 
-        .mission-right h2 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #fff;
-            margin-bottom: 0.5rem;
-        }
-
-        .mission-right h1 {
+        .mission-name {
             font-size: 2.2rem;
             font-weight: 700;
             color: #fff;
+            margin-bottom: 0.5rem;
+            font-family: 'Oswald', sans-serif;
+        }
+
+        .mission-points {
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #ccc;
             margin-bottom: 1rem;
         }
 
-        .mission-right p {
+        .mission-description {
             font-size: 1rem;
             line-height: 1.6;
             color: #e2e8f0;
         }
 
-        .link-text {
+        .video-link {
             color: #90cdf4;
             font-weight: 600;
             text-decoration: none;
-            margin-top: 0.5rem;
+            margin-top: 1rem;
             display: inline-flex;
             align-items: center;
             gap: 0.5rem;
         }
 
-        .link-text:hover {
+        .video-link:hover {
             text-decoration: underline;
         }
 
-        .oswald-font {
-            font-family: 'Oswald', sans-serif;
-        }
+        /* Responsive design for mobile screens */
+        @media (max-width: 768px) {
+            .mission-card,
+            .mission-card.reverse-order {
+                flex-direction: column;
+            }
 
-        .header-bg {
-            background-color: rgba(10, 10, 20, 0.7);
-        }
+            .card-media,
+            .mission-content {
+                width: 100%;
+                padding-bottom: 56.25%; /* Reset to full 16:9 aspect ratio */
+            }
 
-        .footer-bg {
-            background-color: rgba(10, 10, 20, 0.7);
+            .mission-content {
+                padding: 1.5rem;
+                padding-bottom: 0;
+            }
         }
     </style>
 
