--- a/website/navbar.html
+++ b/website/navbar.html
@@ -2,12 +2,12 @@
   <head>
     <style>
       /* Corrected CSS for the logo image */
-      .navbar img.logo-img { 
+      .navbar img.logo-img {
           width: 50px; /* Use a class to specifically target the image */
       }
       /* You can also do it this way, but adding a class is better practice */
-      /* .navbar .logo img { 
-          width: 50px; 
+      /* .navbar .logo img {
+          width: 50px;
       } */
       .navbar:hover {
           opacity: 1;
@@ -30,6 +30,7 @@
           border-radius: 15px;
           opacity: 0.8;
           box-shadow: 0 4px 15px rgba(92, 84, 84, 0.2);
+          border: 1px solid rgba(255, 255, 255, 0.2); /* Added a subtle border */
       }
       .navbar .logo {
           color: white;
@@ -85,6 +86,14 @@
               margin: 5px;
           }
       }
+      /* Added CSS to prevent the navbar from overlapping with content */
+      body {
+          padding-top: 120px; /* Adjust this value as needed based on your navbar's height */
+          margin: 0;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+          background-color: #000;
+          color: #fff;
+      }
     </style>
   </head>
   <body>
@@ -101,5 +110,5 @@
         <a href="./hello.html" style="background-color:#2F9BEE;">AlliedWork</a>
       </div>
     </nav>
-  </body>
+    </body>
 </html>
