--- a/website/navbar.html
+++ b/website/navbar.html
@@ -94,6 +94,14 @@
           background-color: #000;
           color: #fff;
       }
+      /* Added a class for content to make sure it is not hidden */
+      .content {
+          padding: 20px;
+          line-height: 1.6;
+          max-width: 800px;
+          margin: 0 auto;
+          text-align: justify;
+      }
     </style>
   </head>
   <body>
@@ -110,5 +118,5 @@
         <a href="./hello.html" style="background-color:#2F9BEE;">AlliedWork</a>
       </div>
     </nav>
-    </body>
+  </body>
 </html>
