--- a/website/robot.html
+++ b/website/robot.html
@@ -21,6 +21,11 @@
         .main{
             padding-top:75px;
         }
+        body{
+              background-image: url('./images/bgabtus (1).jpg');
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;}
     </style>
 </head>
 
