--- a/website/seasons.html
+++ b/website/seasons.html
@@ -19,8 +19,10 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #1a202c;
-            color: #333;
+              background-image: url('./images/bgabtus (1).jpg');
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;
             display: flex; /* For sticky footer layout */
             flex-direction: column; /* For sticky footer layout */
             min-height: 100vh; /* For sticky footer layout */
