--- a/website/navbar.html
+++ b/website/navbar.html
@@ -249,7 +249,7 @@
       Using a placeholder image for the logo. You can replace this
       with your actual logo file path.
       -->
-      <img src="https://placehold.co/50x50/007bff/ffffff?text=AA" alt="Allied Algorithms Logo" class="logo-img"> Allied
+      <img src="./images/logo.png"> Allied
     </div>
     <button class="hamburger-menu" aria-label="Toggle navigation menu">
       <span></span>
