--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
             <div class="w-full md:w-1/2 p-4 md:order-first text-left text-gray-700">
                 <h3 class="text-2xl font-bold mb-4">What is FIRST LEGO League (FLL)?</h3>
                 <p class="mb-4">
-                    FIRST LEGO League (FLL) is a global robotics competition that introduces young people to the exciting world of STEM through hands-on learning. Teams typically aged 9-16 (ages may vary by region) work together to design, build, and program LEGO robots to complete a series of missions on a themed playing field.
+                    FIRST LEGO League (FLL) is a global robotics competition that introduces young people to the exciting world of STEM through hands-on learning. Team are from 5th to 8th grader and work together to design, build, and program LEGO robots to complete a series of missions on a themed playing field given by the FLL comitte.
                 </p>
                 <p class="mb-4">
                     But FLL is much more than just robots! It also challenges teams to identify a real-world problem related to the annual theme and develop an innovative solution, which they present to a panel of judges. Through this process, participants develop critical thinking, problem-solving, and presentation skills, all while embodying FLL's core values like teamwork and gracious professionalism.
