--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sid Ag - Web Developer Portfolio</title>
+    <title>Sid Ag - Portfolio</title>
     <link rel="icon" href="2.svg" type="image/svg+xml">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -42,11 +42,8 @@
     <!-- Hero Section -->
     <section class="bg-gradient-to-r from-[#3A3982] to-[#4A47A9] text-white py-20 sm:py-32 text-center">
         <div class="container mx-auto px-4">
-            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">
-                Hi, I'm Sid Ag, <br> a Passionate Web Developer.
-            </h1>
             <div class="flex justify-center mb-8">
-                <img src="1.svg" alt="Sid Ag Portfolio Logo" class="w-100 h-100 sm:w-64 sm:h-64 object-contain">
+                <img src="1.svg" alt="Sid Ag Portfolio Logo" class="w-500 h-500 sm:w-100 sm:h-150 object-contain">
             </div>
             <a href="#projects" class="inline-block bg-white text-blue-700 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100">
                 View My Work
@@ -60,7 +57,7 @@
             <h2 class="text-3xl sm:text-4xl font-bold text-white mb-12">
                 My Core Skills
             </h2>
-            <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-8 max-w-6xl mx-auto">
+            <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
                 <!-- HTML5 -->
                 <div class="flex flex-col items-center justify-center p-4 bg-white rounded-xl shadow-lg">
                     <i class="devicon-html5-plain skill-icon text-gray-900"></i>
