--- a/ccsa/index.html
+++ b/ccsa/index.html
@@ -87,7 +87,7 @@
   <header class="fixed top-0 left-0 right-0 z-50 p-4 hidden lg:flex justify-center">
     <div class="navbar-custom flex items-center space-x-4 p-2 shadow-xl">
       <a href="#" class="flex items-center justify-center w-10 h-10 rounded-full bg-white text-gray-900 shadow-md">
-        <img src="./images/logo.png" alt="Logo" class="w-6 h-6">
+        <img src="./images/logo.png" alt="Logo" class="w-10 h-10 rounded-full mx-auto">
       </a>
 
       <nav class="flex space-x-2 text-gray-800 font-medium">
@@ -113,14 +113,14 @@
     <div class="container mx-auto px-4 text-center">
       <h2 class="text-3xl sm:text-4xl font-bold text-emerald-200 mb-12">Members</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
-        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Sid Agrawal <h3 class="text-gray-400">Goofy</h3></div>
-        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 2 <h3 class="text-gray-400">Role</h3></div>
-        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 3 <h3 class="text-gray-400">Role</h3></div>
-        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 4 <h3 class="text-gray-400">Role</h3></div>
+        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Sid Agrawal <h3 class="text-gray-400"></h3></div>
+        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="vik.png" class="w-20 h-20 rounded-full mx-auto mb-2">Vik <h3 class="text-gray-400">VIKKKKK!!!!!</h3></div>
+        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 3 <h3 class="text-gray-400"></h3></div>
+        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 4 <h3 class="text-gray-400"></h3></div>
       </div>
     </div>
   </section>
-    
+
   <!-- Projects -->
   <section id="projects" class="py-16 sm:py-24 bg-emerald-800 bg-opacity-20">
     <div class="container mx-auto px-4">
@@ -140,7 +140,7 @@
         It defines our values, goals, and responsibilities as students, teachers, and leaders.
       </p>
       <div class="max-w-xl mx-auto">
-        <img src="https://via.placeholder.com/600x400?text=School+Charter+Image" alt="School Charter Placeholder" class="rounded-xl shadow-lg mx-auto">
+        <img src="charter.png" alt="School Charter Placeholder" class="rounded-xl shadow-lg mx-auto">
       </div>
     </div>
   </section>
