--- a/ccsa/index.html
+++ b/ccsa/index.html
@@ -114,7 +114,7 @@
       <h2 class="text-3xl sm:text-4xl font-bold text-emerald-200 mb-12">Members</h2>
       <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
         <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Sid Agrawal <h3 class="text-gray-400"></h3></div>
-        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="vik.png" class="w-20 h-20 rounded-full mx-auto mb-2">Vik <h3 class="text-gray-400">VIKKKKK!!!!!</h3></div>
+        <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="./images/vik.png" class="w-20 h-20 rounded-full mx-auto mb-2">Vik <h3 class="text-gray-400">VIKKKKK!!!!!</h3></div>
         <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 3 <h3 class="text-gray-400"></h3></div>
         <div class="p-4 bg-emerald-900 bg-opacity-30 rounded-xl"> <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" class="w-20 h-20 rounded-full mx-auto mb-2">Member 4 <h3 class="text-gray-400"></h3></div>
       </div>
@@ -140,7 +140,7 @@
         It defines our values, goals, and responsibilities as students, teachers, and leaders.
       </p>
       <div class="max-w-xl mx-auto">
-        <img src="charter.png" alt="School Charter Placeholder" class="rounded-xl shadow-lg mx-auto">
+        <img src="./images/charter.png" alt="School Charter Placeholder" class="rounded-xl shadow-lg mx-auto">
       </div>
     </div>
   </section>
