--- a/ccsa/index.html
+++ b/ccsa/index.html
@@ -87,7 +87,7 @@
   <header class="fixed top-0 left-0 right-0 z-50 p-4 hidden lg:flex justify-center">
     <div class="navbar-custom flex items-center space-x-4 p-2 shadow-xl">
       <a href="#" class="flex items-center justify-center w-10 h-10 rounded-full bg-white text-gray-900 shadow-md">
-        <img src="./images/logo.png" alt="Logo" class="w-10 h-10 rounded-full mx-auto">
+        <img src="./images/Logo.png" alt="Logo" class="w-10 h-10 rounded-full mx-auto">
       </a>
 
       <nav class="flex space-x-2 text-gray-800 font-medium">
