--- a/ccsa/index.html
+++ b/ccsa/index.html
@@ -9,11 +9,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-FBM9Q91BZX');
-</script>
+</script>s
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CCSA 8th Grade</title>
-  <link rel="icon" href="./images/logo.png" type="image/png">
+  <link rel="icon" href="./images/Logo.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
