--- a/ccsa/index.html
+++ b/ccsa/index.html
@@ -9,11 +9,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-FBM9Q91BZX');
-</script>s
+</script>
+ <link rel="icon" type="image/png" href="./images/Logo.png" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CCSA 8th Grade</title>
-  <link rel="icon" href="./images/Logo.png" type="image/png">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -111,9 +111,9 @@
   <!-- Hero Section -->
   <section class="bg-gradient-to-r from-[#065f46] to-[#059669] text-white py-20 sm:py-32 text-center">
     <div class="container mx-auto px-4">
-      <img src="./images/logo.png" alt="CCSA Logo" class="mx-auto w-24 h-24 mb-4 rounded-full shadow-lg">
+      <img src="./images/Logo.png" alt="CCSA Logo" class="mx-auto w-24 h-24 mb-4 rounded-full shadow-lg">
       <h1 class="text-4xl sm:text-6xl font-extrabold mb-2">CCSA 8th Grade</h1>
-      <p class="text-xl sm:text-2xl font-light italic">Together We Can Lift Each Other Up</p>
+      <p class="text-xl sm:text-2xl font-light italic">Let's Help Lift Each Other Up </p>
     </div>
   </section>
 
