--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,7 +43,7 @@
     <section class="bg-gradient-to-r from-[#3A3982] to-[#4A47A9] text-white py-20 sm:py-32 text-center">
         <div class="container mx-auto px-4">
             <div class="flex justify-center mb-8">
-                <img src="1.svg" alt="Sid Ag Portfolio Logo" class="w-500 h-500 sm:w-100 sm:h-150 object-contain">
+                <img src="1.svg" alt="Sid Ag Portfolio Logo" class="w-500 h-500 max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg">
             </div>
             <a href="#projects" class="inline-block bg-white text-blue-700 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105 hover:bg-gray-100">
                 View My Work
