--- a/portfolio/v2index.html
+++ b/portfolio/v2index.html
@@ -110,10 +110,12 @@
                     `Allied Work allows users to see where their robots will go on the game mat with the built-in visualizer. This is very helpful because many times teams are using trial and error to reach their desired location on the game mat. Not only can teams do this, but they can also code with ease. The Allied Workspace allows users to code in its native language called Allied Work. Allied Work is made to be simple so everybody can code their robot. When you are done coding your path, you can press the run button to see the path of the robot, then copy the Python code from the built-in Python generator.`,
                 ],
             },
-            'autocorrection': {
-                title: 'Allied AutoCorrection',
+            'AlliedAutoCorrectionBlocks': {
+                title: 'Allied AutoCorrection Blocks',
                 paragraphs: [
-                    `Allied AutoCorrection is a beautiful and helpful function for all FLL teams. The function provides precision in all aspects. Imagine you are walking straight and you trip. Now you will get back in the same line you were walking in, and walk until you reach your final destination. Allied AutoCorrection is here to help the robot do the same. One of the sensors used is the gyro sensor. A gyro sensor helps track the robot's position in a graph. The gyro sensor helps with the x, y, and z plane. This helps us to see if the robot has encountered an error.`,
+                    `Allied AutoCorrection is a beautiful and helpful function for all FLL teams. The function provides precision while running code. Imagine you are walking straight and you trip. Now you will get back in the same line you were walking in, and walk until you reach your final destination. Allied AutoCorrection is here to help the robot do the same. One of the sensors used is the gyro sensor. A gyro sensor helps track the robot's pitch, yaw, and roll. The code essentially checks if the robot’s current yaw or heading is within a range of 5 degrees from the target. If it isn’t, it checks whether the current heading is greater or less than the target. If it is greater, the robot turns left until it is within the 5-degree range. If it is less, the robot turns right until it reaches that range.
+The code can be modified to run faster; however, increasing the speed often requires a larger acceptable range, while a smaller range typically demands more time.
+`,
                 ],
             },
             'related': {
