--- a/website/seasons/seasons.html
+++ b/website/seasons/seasons.html
@@ -5,137 +5,18 @@
     <script src="seasons.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allied Algorithms - FLL Team Accomplishments</title>
+    <title>Team Accomplishments</title>
 
     <link rel="apple-touch-icon" sizes="500x500" href="./images/logo.png">
-    <link rel="icon" type="image/x-icon" href="./images/logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-image: url('./images/bgabtus (1).jpg');
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            margin: 0;
-        }
+    <link rel="stylesheet" href="../home/style.css">
+    <link rel="stylesheet" href= "seasons.css">
 
-        main {
-            padding-top: 75px;
-            flex-grow: 1;
-        }
-
-        /* Styles for the "Currently" section */
-        .current-stats {
-            background-color: #fff;
-            border: 2px dashed #e5e7eb;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .current-stats .stat-item {
-            text-align: center;
-            padding: 10px;
-            flex-grow: 1;
-            min-width: 120px;
-        }
-
-        .current-stats .stat-item h2 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #1a73e8;
-            line-height: 1.1;
-        }
-
-        .current-stats .stat-item p {
-            font-size: 0.9rem;
-            color: #555;
-            margin-top: 5px;
-        }
-
-        /* Styles for the main season cards (using Flexbox/Grid) */
-        .season-card {
-            background-color: #fff;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            margin-bottom: 30px;
-            display: flex;
-            flex-direction: column;
-        }
-
-        @media (min-width: 768px) {
-            .season-card {
-                flex-direction: row;
-            }
-
-            .season-card.reverse-order {
-                flex-direction: row-reverse;
-            }
-        }
-
-        .season-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        .season-card img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-        }
-
-        @media (min-width: 768px) {
-            .season-card img {
-                width: 40%;
-                height: auto;
-                max-height: 300px;
-            }
-        }
-
-        .season-content {
-            padding: 25px;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        .season-content h1 {
-            font-size: 2.2rem;
-            font-weight: 700;
-            color: #0d47a1;
-            margin-bottom: 5px;
-        }
-
-        .season-content h4 {
-            font-size: 1.3rem;
-            font-weight: 600;
-            color: #4a4a4a;
-            margin-bottom: 15px;
-        }
-
-        .season-content p {
-            font-size: 1rem;
-            line-height: 1.6;
-            color: #555;
-        }
-    </style>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MG0KYH98NN"></script>
     <script>
@@ -237,8 +118,8 @@
 
         // Run functions when the DOM is fully loaded
         document.addEventListener('DOMContentLoaded', function() {
-            loadHTML('includedContent', 'navbar.html');
-            loadHTML('Content', 'footer.html');
+            loadHTML('includedContent', '../layout/navbar.html');
+            loadHTML('Content', '../layout/footer.html');
             renderCurrentSeason(); // Call this to populate the current season details
             renderPastSeasons(); // Call this to populate the past seasons
         });
