--- a/website/work/index.html
+++ b/website/work/index.html
@@ -3,78 +3,97 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VSCode-Like Editor</title>
+<title>AlliedWork Editor</title>
+
+<!-- Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
+<!-- Monaco Editor -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.45.0/min/vs/loader.min.js"></script>
+<!-- Material Icons -->
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <style>
-html, body { height: 100%; margin: 0; }
-#editor { flex:1; min-height:200px; }
-#console { height:120px; background:#1a202c; color:#e2e8f0; overflow-y:auto; padding:0.5rem; font-family:monospace; resize:vertical;}
-.iframe-container { flex:1; min-height:300px; }
-button { padding:0.25rem 0.5rem; border-radius:0.25rem; background:#4a5568; color:white; border:none; cursor:pointer;}
-button:hover { background:#718096; }
-.material-icons { font-size:20px; vertical-align:middle; }
+  html, body { height: 100%; margin: 0; }
+  #editor { flex: 1; min-height: 200px; }
+  #console { height: 140px; background:#1a202c; color:#e2e8f0; overflow-y:auto; padding:0.5rem; font-family:monospace; resize:vertical; }
+  .iframe-container { flex:1; min-height:300px; }
+  button { transition: background 0.2s ease; }
 </style>
 </head>
+
 <body class="bg-gray-900 text-gray-200 flex flex-col h-screen">
 
 <!-- Top bar -->
-<div class="flex items-center justify-between bg-gray-800 h-10 px-4 text-sm">
-  <div class="flex items-center space-x-4">
-    <span class="font-semibold text-blue-400">VSCode Clone</span>
+<div class="flex items-center justify-between bg-gray-800 h-12 px-4 text-sm shadow-md">
+  <div class="flex items-center space-x-3">
+    <span class="font-semibold text-blue-400">AlliedWork</span>
   </div>
 </div>
 
-<div class="flex flex-1">
-  <!-- Left navbar -->
-  <div class="flex flex-col w-14 bg-gray-800 border-r border-gray-700 py-2 items-center gap-3">
-    <button title="Home" onclick="location.href='index.html'"><span class="material-icons">home</span></button>
-    <button title="Theme" id="leftThemeToggle"><span class="material-icons">brightness_4</span></button>
-    <button title="Portfolio" onclick="window.open('https://agsid.github.io/portfolio/v2index.html','_blank')"><span class="material-icons">public</span></button>
-    <button title="Toggle Explorer" id="toggleExplorer"><span class="material-icons">menu</span></button>
-    <button title="Toggle Map" id="toggleMap"><span class="material-icons">map</span></button>
+<div class="flex flex-1 overflow-hidden">
+  <!-- Sidebar -->
+  <div class="flex flex-col w-16 bg-gray-800 border-r border-gray-700 py-2 items-center gap-3">
+    <img src="../images/logo.png" class="w-6/8">
+    <button title="Home" class="hover:bg-gray-700 p-2 rounded" onclick="location.href='index.html'">
+      <span class="material-icons">home</span>
+    </button>
+    <button title="Theme Toggle" class="hover:bg-gray-700 p-2 rounded" id="leftThemeToggle">
+      <span class="material-icons">brightness_4</span>
+    </button>
+    <button title="Portfolio" class="hover:bg-gray-700 p-2 rounded" onclick="window.open('https://agsid.github.io/portfolio/v2index.html','_blank')">
+      <span class="material-icons">public</span>
+    </button>
+    <button title="Toggle Explorer" class="hover:bg-gray-700 p-2 rounded" id="toggleExplorer">
+      <span class="material-icons">menu</span>
+    </button>
+    <button title="Toggle Map" class="hover:bg-gray-700 p-2 rounded" id="toggleMap">
+      <span class="material-icons">map</span>
+    </button>
   </div>
 
-  <!-- Explorer panel -->
-  <div class="explorer w-60 bg-gray-850 border-r border-gray-700 p-2 text-sm">
-    <h2 class="text-gray-400 uppercase text-xs mb-2">Explorer</h2>
-    <div class="mb-2">
-      <div class="text-gray-300 font-medium">User</div>
+  <!-- Explorer Panel -->
+  <div class="explorer w-64 bg-gray-850 border-r border-gray-700 p-3 text-sm overflow-y-auto">
+    <h2 class="text-gray-400 uppercase text-xs mb-3 font-semibold">Explorer</h2>
+    <div class="mb-3">
+      <div class="text-gray-300 font-medium mb-1">User</div>
       <div id="file-user-main.py" class="cursor-pointer pl-4 py-1 hover:bg-gray-700 rounded" onclick="openFile('main.py')">main.py</div>
     </div>
-    <div class="mb-2">
-      <div class="text-gray-300 font-medium">Available Commands</div>
+    <div class="mb-3">
+      <div class="text-gray-300 font-medium mb-1">Available Commands</div>
       <div id="file-avalComm.txt" class="cursor-pointer pl-4 py-1 hover:bg-gray-700 rounded" onclick="openFile('avalComm.txt')">avalComm.txt</div>
     </div>
     <div>
-      <div class="text-gray-300 font-medium">Generated</div>
+      <div class="text-gray-300 font-medium mb-1">Generated</div>
       <div id="file-generated-generated.py" class="cursor-pointer pl-4 py-1 hover:bg-gray-700 rounded" onclick="openFile('generated.py')">generated.py</div>
     </div>
   </div>
 
   <!-- Editor + Map + Console -->
-  <div class="flex-1 flex flex-col">
+  <div class="flex-1 flex flex-col overflow-hidden">
     <div id="editor" class="flex-1"></div>
     <iframe id="mapIframe" src="robot-map.html" class="flex-1 w-full border-0"></iframe>
-    <div id="console" class="h-40 bg-gray-900 text-gray-200 overflow-auto p-2 font-mono resize-y"></div>
+    <div id="console" class="h-36 bg-gray-900 text-gray-200 overflow-auto p-2 font-mono resize-y"></div>
   </div>
 </div>
 
 <script>
 const defaultMain = `print('Hello from main.py')`;
-const availableCommands = `drive(inches)
-turn(degrees)
-speed(%) of robot
-speed_motor(%) set individual motor speed
-turn_motor(port, degree)
-wait(milliseconds)
-arm()`;
-
+const availableCommands = `
+drive(inches)              → Move the robot forward a specific distance (in inches)
+turn(degrees)              → Rotate the robot by a given angle (in degrees)
+speed(%)                   → Set the overall robot speed (percentage)
+speed_motor(%)             → Set speed of an individual motor (percentage)
+turn_motor(port, degrees)  → Rotate a motor on the specified port by a number of degrees
+wait(milliseconds)         → Pause execution for the given number of milliseconds
+arm()                      → Activate the robot's arm mechanism
+`;
 const generatedTemplate = `
 import runloop,math,motor_pair,motor,time
 from hub import port
-r = 22
+# r is the radius of the wheel. This is used to find the circumference of the wheel
+r = 22 # Assuming a standard LEGO wheel with a radius of 22mm
+# This is the angle changed when the wheels run for 1 rotation in opposite directions.
+# This is used in the turning function to convert a desired turn angle into motor degrees.
 total=100
 
 def speed(x):
@@ -104,17 +123,17 @@ def wait(mili):
 
 async def main():
     motor_pair.pair(motor_pair.PAIR_1, port.C, port.D)
+    
     # User's code starts here
+    speed(50)
+
 `;
 
 let currentFile = 'main.py';
 let editor;
-let files = {
-  'main.py': localStorage.getItem('main.py') || defaultMain,
-  'avalComm.txt': availableCommands
-};
+let files = { 'main.py': localStorage.getItem('main.py') || defaultMain, 'avalComm.txt': availableCommands };
 
-function logConsole(msg) {
+function logConsole(msg){
   const consoleEl = document.getElementById('console');
   const p = document.createElement('div');
   p.textContent = msg;
@@ -122,28 +141,26 @@ function logConsole(msg) {
   consoleEl.scrollTop = consoleEl.scrollHeight;
 }
 
-function injectAsync(code) {
+function injectAsync(code){
   return code.replace(/\b(drive|turn|arm)\(/g, 'async $1(');
 }
 
-function getGeneratedContent() {
+function getGeneratedContent(){
   return generatedTemplate + '\n' + injectAsync(files['main.py']) + '\nrunloop.run(main())';
 }
 
-function validateCommands() {
+function validateCommands(){
   const allowed = ['drive','turn','speed','speed_motor','turn_motor','wait','arm'];
   const lines = files['main.py'].split('\n');
-  for(let i=0;i<lines.length;i++){
-    let line = lines[i].split('#')[0].trim();
-    if(!line) continue;
+  lines.forEach((line,i)=>{
+    line = line.split('#')[0].trim();
+    if(!line) return;
     let cmdMatch = line.match(/\b([a-zA-Z_][a-zA-Z0-9_]*)\s*\(/);
     if(cmdMatch && !allowed.includes(cmdMatch[1])){
       logConsole(`Warning: invalid command '${cmdMatch[1]}' at line ${i+1}`);
     }
-  }
+  });
 }
-
-// Monaco editor
 require.config({ paths: { vs: 'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.45.0/min/vs' } });
 require(['vs/editor/editor.main'], function() {
   editor = monaco.editor.create(document.getElementById('editor'), {
@@ -165,32 +182,22 @@ require(['vs/editor/editor.main'], function() {
 
 function openFile(name){
   currentFile = name;
-  if(name==='main.py'){
-    const model = monaco.editor.createModel(files[name],'python');
-    editor.setModel(model);
-    editor.updateOptions({readOnly:false});
-  } else if(name==='generated.py'){
-    const model = monaco.editor.createModel(getGeneratedContent(),'python');
-    editor.setModel(model);
-    editor.updateOptions({readOnly:true});
-  } else if(name==='avalComm.txt'){
-    const model = monaco.editor.createModel(files[name],'plaintext');
-    editor.setModel(model);
-    editor.updateOptions({readOnly:true});
-  }
+  const modelType = name.endsWith('.py') ? 'python' : 'plaintext';
+  const content = name==='generated.py' ? getGeneratedContent() : files[name];
+  const model = monaco.editor.createModel(content, modelType);
+  editor.setModel(model);
+  editor.updateOptions({readOnly: name !== 'main.py'});
 }
 
-// Left navbar toggles
+// Sidebar toggles
 const explorer = document.querySelector('.explorer');
 const mapIframe = document.getElementById('mapIframe');
 
 document.getElementById('toggleExplorer').addEventListener('click', ()=>{
-  if(explorer.style.display==='none') explorer.style.display='block';
-  else explorer.style.display='none';
+  explorer.classList.toggle('hidden');
 });
 document.getElementById('toggleMap').addEventListener('click', ()=>{
-  if(mapIframe.style.display==='none') mapIframe.style.display='block';
-  else mapIframe.style.display='none';
+  mapIframe.classList.toggle('hidden');
 });
 
 document.getElementById('leftThemeToggle').addEventListener('click', ()=>{
