--- a/website/home/index.html
+++ b/website/home/index.html
@@ -27,7 +27,12 @@
   <div id="navbar"></div>
 
   <!-- Hero Image -->
-  <img src="../images/index_plan (1920 x 1150 px).svg" alt="Allied Algorithms" class="w-full h-auto">
+  <!-- Hero Image -->
+<!-- Desktop / larger screens -->
+<img src="../images/index_plan (1920 x 1150 px).svg" alt="Allied Algorithms" class="w-full h-auto hidden sm:block">
+
+<!-- Mobile / phone screens -->
+<img src="../images/Untitled design(2).png" alt="Allied Algorithms" class="w-full h-auto sm:hidden">
 
   <!-- Main Section -->
   <section class="max-w-7xl mx-auto my-12 p-8 bg-white rounded-lg shadow-xl fade-in-box">
