--- a/website/index.html
+++ b/website/index.html
@@ -2,10 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=agsid.github.io/website/home/index.html">
+    <meta http-equiv="refresh" content="2; url=../website/home/index.html">
     <title>Redirecting...</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+
+        .spinner {
+            border: 8px solid #f3f3f3;
+            border-top: 8px solid #3498db;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        p {
+            font-size: 1.1rem;
+        }
+    </style>
 </head>
 <body>
+    <div class="spinner"></div>
     <p>Redirecting to <a href="agsid.github.io/website/home/index.html">Home Page</a>...</p>
 </body>
 </html>
