--- a/landingPage.html
+++ b/landingPage.html
@@ -1,19 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Landing page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Landing Page</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="m-10 items-center bg-gray-100">
-    <h1 class="text-4xl font-bold text-center">Welcome to the Landing Page</h1>
-    <p class="mt-4 ml-10">Folders below:</p>
-    <div class=" ml-20 mt-2 space-y-2">
-        <ul class="text-3xl ">
-            <li><a href="./website/index.html" class="mb-20 text-blue-500 underline">📁Website</a></li>
-            <li><a href="./ccsa/index.html" class="mb-20 text-blue-500 underline">📁CCSA</a></li>
-            <li><a href="./portfolio/index.html" class="mb-20 text-blue-500 underline">📁Portfolio</a></li>
-        </ul>
+<body class="min-h-screen flex flex-col items-center justify-center bg-gradient-to-br from-gray-100 via-gray-200 to-gray-300 p-6">
+
+    <!-- Header -->
+    <h1 class="text-5xl md:text-6xl font-extrabold text-gray-800 text-center mb-8">
+        Welcome to the Landing Page
+    </h1>
+
+    <p class="text-xl text-gray-700 mb-6 text-center">
+        Select a folder below to explore:
+    </p>
+
+    <!-- Folder Links -->
+    <div class="flex flex-col md:flex-row gap-6 md:gap-12 items-center">
+        <a href="./website/index.html" class="flex items-center gap-2 px-6 py-4 bg-white rounded-xl shadow-lg text-2xl text-blue-600 hover:bg-blue-50 hover:scale-105 transform transition">
+            📁 Website
+        </a>
+        <a href="./ccsa/index.html" class="flex items-center gap-2 px-6 py-4 bg-white rounded-xl shadow-lg text-2xl text-blue-600 hover:bg-blue-50 hover:scale-105 transform transition">
+            📁 CCSA
+        </a>
+        <a href="./portfolio/index.html" class="flex items-center gap-2 px-6 py-4 bg-white rounded-xl shadow-lg text-2xl text-blue-600 hover:bg-blue-50 hover:scale-105 transform transition">
+            📁 Portfolio
+        </a>
     </div>
+
 </body>
 </html>
