--- a/website/robot/robot.html
+++ b/website/robot/robot.html
@@ -16,13 +16,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../home/style.css">
     <style>
         .main{
             padding-top:75px;
         }
         body{
-              background-image: url('./images/bgabtus (1).jpg');
+              background-image: url('../images/bgabtus (1).jpg');
         background-size: cover;
         background-attachment: fixed;
         background-position: center;}
@@ -37,8 +37,8 @@
     </main>
     <div id="Content"></div>
 
-    <script src="robotDesigns.js"></script>
-    <script src="script.js"></script>
+    <script src="./robotDesigns.js"></script>
+    <script src="../home/script.js"></script>
 </body>
 
 </html>
