--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header -->
     <h1 class="text-5xl md:text-6xl font-extrabold text-gray-800 text-center mb-8">
-        Welcome to the Landing Page
+        Welcome to the Sid's domain!
     </h1>
 
     <p class="text-xl text-gray-700 mb-6 text-center">
@@ -18,7 +18,7 @@
     </p>
 
     <!-- Folder Links -->
-    <div class="flex flex-col md:flex-row gap-6 md:gap-12 items-center">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-12">
         <a href="./website/index.html" class="flex items-center gap-2 px-6 py-4 bg-white rounded-xl shadow-lg text-2xl text-blue-600 hover:bg-blue-50 hover:scale-105 transform transition">
             📁 Website
         </a>
