--- a/website/robot/robot.html
+++ b/website/robot/robot.html
@@ -1,44 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MG0KYH98NN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+        function gtag(){ dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'G-MG0KYH98NN');
     </script>
 
-    <link rel="apple-touch-icon" sizes="500x500" href="./images/logo.png">
-    <link rel="icon" type="image/x-icon" href="./images/logo.png">
-    <title>Allied Algorithms</title>
+    <!-- Load jQuery before using it -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- Load navbar and footer -->
+    <script>
+        $(function () {
+            $("#navbar").load("../layout/navbar.html");
+            $("#footer").load("../layout/footer.html");
+        });
+    </script>
+
+    <!-- Icons and meta -->
+    <link rel="apple-touch-icon" sizes="500x500" href="../images/logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/logo.png">
+    <title>Allied Algorithms</title>
+
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="../home/style.css">
+
+    <!-- Custom background -->
     <style>
-        .main{
-            padding-top:75px;
+        body {
+            background-image: url('../images/bgabtus (1).jpg');
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
         }
-        body{
-              background-image: url('../images/bgabtus (1).jpg');
-        background-size: cover;
-        background-attachment: fixed;
-        background-position: center;}
+        .main {
+            padding-top: 75px;
+        }
     </style>
 </head>
 
 <body>
-    <div id="includedContent"></div>
+    <!-- Navbar placeholder -->
+    <div id="navbar"></div>
 
-    <main class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+    <!-- Main content -->
+    <main class="main max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
         <div id="robot-cards-container"></div>
     </main>
-    <div id="Content"></div>
 
+    <!-- Footer placeholder -->
+    <div id="footer"></div>
+
+    <!-- Scripts -->
     <script src="./robotDesigns.js"></script>
     <script src="../home/script.js"></script>
 </body>
-
 </html>
